--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,23 @@
 language: ruby
+cache: bundler
 rvm:
   - 2.3.0
+  - 2.3.1
+  - ruby-head
+env:
+  - DB=SQLITE
+  - DB=POSTGRES
+  - DB=MYSQL
+gemfile:
+  - gemfiles/rails40.gemfile
+  - gemfiles/rails41.gemfile
+  - gemfiles/rails42.gemfile
+  - gemfiles/rails50.gemfile
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+  fast_finish: true
+branches:
+  only:
+  - master
+sudo: false
